@@ -1,6 +1,0 @@
-%Error-UNSUPPORTED: t/t_param_in_func_bad.v:24:26: Unsupported: Parameters in functions with complex assign
-                                                 : ... In instance t
-   24 |    localparam logic[7:0] digits[10]
-      |                          ^~~~~~
-                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
-%Error: Exiting due to
